# STRling

./: .gitignore  API_USABILITY_REPORT.md  AUDIT_FINAL.md  AUDIT_REPORT.md  CICD_NEXT_STEPS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_AUDIT_REPORT.md  MISSING_FEATURES.md  README.md  SECURITY.md  SIMPLY_TERMINOLOGY_REPORT.md  TEST_AUDIT_REPORT.md  TEST_REPORT.md  analyze_spec_files.py  audit_bindings.sh  audit_phase2.sh  check_errors.js  debug_regex.py  package-lock.json  package.json  scan_ast_types.py  strling  strling.ps1  test_regex.py  toolchain.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  remediate-c-simply.md  remediate-cpp-simply.md  remediate-csharp-simply.md  remediate-dart-simply.md  remediate-go-simply.md  remediate-java-simply.md  remediate-kotlin-simply.md  remediate-perl-simply.md  remediate-php-simply.md  remediate-r-simply.md  remediate-swift-simply.md  task.md
.github/workflows/: ci.yml  spec-ci.yml
bindings/c/: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  README.md  c-test-counts.md  test_output.txt
bindings/cpp/: .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  TASK2_1_PROGRESS.md  TASK2_SUMMARY.md  conanfile.py
bindings/cpp/cmake/: STRlingConfig.cmake.in
bindings/cpp/docs/: API.md  api_reference.md
bindings/cpp/include/strling/: ast.hpp  compiler.hpp  ir.hpp  simply.hpp  strling.hpp
bindings/cpp/include/strling/core/: ir.hpp  nodes.hpp  parser.hpp  strling_parse_error.hpp
bindings/cpp/src/: ast.cpp  compiler.cpp  simply.cpp
bindings/cpp/src/core/: ir.cpp  nodes.cpp  parser.cpp  strling_parse_error.cpp
bindings/cpp/test/: CMakeLists.txt
bindings/cpp/test/unit/: anchors_test.cpp  errors_test.cpp  flags_and_free_spacing_test.cpp  us_phone_test.cpp
bindings/cpp/tests/: conformance_test.cpp
bindings/cpp/tooling/: no_public_pointers.py
bindings/csharp/: .gitignore  README.md  STRling.sln
bindings/dart/: README.md  pubspec.yaml
bindings/fsharp/: README.md  STRling.sln
bindings/go/: .gitignore  README.md  ast.go  conformance_test.go  go.mod  strling-cli  strling.go  strling_test.go
bindings/java/: NEXT_STEPS.md  README.md  TEST_PARITY_AUDIT.md  TEST_PARITY_COMPLETION_REPORT.md  TEST_PARITY_IMPLEMENTATION_GUIDE.md  java-test-counts.md  pom.xml
bindings/javascript/: .gitignore  README.md  jest.config.js  jest.config.mjs  js-test-counts.md  package-lock.json  package.json  test-import.mjs  test-special.js  test_has.mjs  test_proxy.mjs  test_string.mjs  tsconfig.json
bindings/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bindings/lua/: README.md  setup.sh  strling-scm-1.rockspec  test.lua  verify_simply.lua
bindings/perl/: .gitignore  Makefile.PL  README.md  dist.ini
bindings/php/: .gitignore  README.md  composer.json  phpunit.xml  split_classes.py
bindings/python/: MANIFEST.in  README.md  pyproject.toml  python-test-counts.md  requirements.txt  setup.py  testing.py
bindings/python/STRling/: __init__.py  lib.py  patterns.py  templates.py  templates_v1.py
bindings/python/STRling/simply/: __init__.py  constructors.py  lookarounds.py  pattern.py  sets.py  simply.py  static.py
bindings/python/docs/: api_reference.md  pypi_docs.md  strling_docs.md
bindings/python/scripts/: compute_test_counts.py
bindings/python/src/STRling/: __init__.py  cli_server.py
bindings/python/src/STRling/core/: __init__.py  compiler.py  errors.py  hint_engine.py  ir.py  nodes.py  parser.py  parser.py.bak  validator.py
bindings/python/src/STRling/emitters/: pcre2.py
bindings/python/src/STRling/simply/: __init__.py  constructors.py  lookarounds.py  pattern.py  sets.py  static.py
bindings/python/tests/: IMPLEMENTATION_COMPLETE.md  TEST_SUITE_AUDIT.md  test_hello.py  test_validator.py
bindings/python/tests/e2e/: test_cli_smoke.py  test_e2e_combinatorial.py  test_pcre2_emitter.py
bindings/python/tests/unit/: test_anchors.py  test_anchors_and_dot.py  test_char_classes.py  test_conformance.py  test_emitter_edges.py  test_error_formatting.py  test_errors.py  test_flags_and_free_spacing.py  test_groups_backrefs_lookarounds.py  test_ieh_audit_gaps.py  test_ir_compiler.py  test_literals_and_escapes.py  test_lsp_diagnostics.py  test_parser_errors.py  test_quantifiers.py  test_schema_validation.py  test_simply_api.py  test_simply_pattern_extra.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/ruby/: .rspec_status  COMPLETION_SUMMARY.md  Gemfile  README.md  README_IMPLEMENTATION_STATUS.md  Rakefile  strling.gemspec  test_readme.rb
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs
bindings/rust/docs/: api_reference.md  architecture.md
bindings/rust/examples/: demo.rs
bindings/rust/src/: lib.rs  simply.rs
bindings/rust/src/core/: compiler.rs  errors.rs  hint_engine.rs  ir.rs  mod.rs  nodes.rs  parser.rs  validator.rs
bindings/rust/src/emitters/: mod.rs  pcre2.rs
bindings/rust/tests/: conformance.rs  deser.rs  integration_test.rs  unit_tests.rs  unit_tests.rs.bak
bindings/swift/: .gitignore  Package.swift  README.md  swift-test-counts.md
bindings/typescript/: .gitignore  README.md  jest.config.mjs  package-lock.json  package.json  test_phone.mjs  tsconfig.json
core/: __init__.py  compiler.py
docs/: DOCUMENTATION_GUIDELINES.md  README.md  architecture.md  ci_cd_setup.md  guidelines.md  index.md  releasing.md  spec_links.md  testing_design.md  testing_setup.md  testing_standard.md  testing_workflow.md
emitters/: pcre2.py
reports/: final_aggregated_report.md
spec/: README.md  features.json
tests/: README.md
tooling/: TEST_REPORT.md  audit_conformance.py  audit_hints.py  audit_omega.py  audit_omega_simulate.py  audit_precision.py  batch_audit.py  check_version_exists.py  generate_c_asts.sh  generate_final_report.py  index.md  migrate_tests.py  parse_strl.py  sample_audit_results.json  strip_migrated_tests.py  sync_versions.py  test_verify_ecosystem.py  verify_ecosystem.py  verify_run_all.txt
(+1412 files in other folders)
